// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`People/Form error state 1`] = `
<div>
  <header
    class="sc-hKgILt gQvQYy"
  >
    <div
      class="sc-dlfnbm sc-eCssSg eGSTIL bbYQtM"
    >
      <a
        class="sc-jSgupP eRMlkk"
        href="#profile-page"
      >
        <span
          class="sc-gKsewC dyXmPG"
        />
        <div
          class="sc-iBPRYJ guClff"
        >
          <span
            class="sc-bdfBwQ iSpnv"
          >
            Julie Howard
          </span>
          <span
            class="sc-bdfBwQ sc-gsTCUz gdLWuU hLkbdn"
          >
            Admin
          </span>
        </div>
      </a>
    </div>
  </header>
  <form
    data-testid="userForm"
    id="userForm"
  >
    <div
      class="sc-cxFLnm kElVqe sc-iUuytg idOTNT"
      type="error"
    >
      <svg
        fill="var(--colors-error-icon)"
        width="22"
      >
        times-circle.svg
      </svg>
       
      <div
        class="sc-lmoMRL dmXwXO"
      >
        Ups, something in our servers went wrong!
      </div>
    </div>
    <label
      class="sc-jrAGrp ieNyNc"
    >
      <span
        class="sc-kEjbxe fqTkVY"
      >
        Name
      </span>
      <span
        class="sc-iqHYGH kZrLko"
      >
        <input
          class="sc-crrsfI cZzFYO"
          name="name"
          placeholder="e.g. Kim Fog"
          required=""
          type="text"
          value=""
        />
      </span>
      <span
        class="sc-fubCfw kxTiMr"
      >
        First and last name
      </span>
    </label>
    <label
      class="sc-jrAGrp ieNyNc"
    >
      <span
        class="sc-kEjbxe fqTkVY"
      >
        Job title
      </span>
      <span
        class="sc-iqHYGH kZrLko"
      >
        <input
          class="sc-crrsfI cZzFYO"
          name="jobTitle"
          placeholder="e.g. Product Manager"
          required=""
          type="text"
          value=""
        />
      </span>
      <span
        class="sc-fubCfw kxTiMr"
      >
        What is their role?
      </span>
    </label>
    <label
      class="sc-jrAGrp ieNyNc"
    >
      <span
        class="sc-kEjbxe fqTkVY"
      >
        Country
      </span>
      <select
        class="sc-bqyKva iYyJTz"
        name="country"
        required=""
      >
        <option
          hidden=""
          value=""
        >
          Select country
        </option>
        <option
          value="Afghanistan"
        >
          Afghanistan
        </option>
        <option
          value="Albania"
        >
          Albania
        </option>
        <option
          value="Algeria"
        >
          Algeria
        </option>
        <option
          value="Andorra"
        >
          Andorra
        </option>
        <option
          value="Angola"
        >
          Angola
        </option>
        <option
          value="Antigua & Deps"
        >
          Antigua & Deps
        </option>
        <option
          value="Argentina"
        >
          Argentina
        </option>
        <option
          value="Armenia"
        >
          Armenia
        </option>
        <option
          value="Australia"
        >
          Australia
        </option>
        <option
          value="Austria"
        >
          Austria
        </option>
        <option
          value="Azerbaijan"
        >
          Azerbaijan
        </option>
        <option
          value="Bahamas"
        >
          Bahamas
        </option>
        <option
          value="Bahrain"
        >
          Bahrain
        </option>
        <option
          value="Bangladesh"
        >
          Bangladesh
        </option>
        <option
          value="Barbados"
        >
          Barbados
        </option>
        <option
          value="Belarus"
        >
          Belarus
        </option>
        <option
          value="Belgium"
        >
          Belgium
        </option>
        <option
          value="Belize"
        >
          Belize
        </option>
        <option
          value="Benin"
        >
          Benin
        </option>
        <option
          value="Bhutan"
        >
          Bhutan
        </option>
        <option
          value="Bolivia"
        >
          Bolivia
        </option>
        <option
          value="Bosnia Herzegovina"
        >
          Bosnia Herzegovina
        </option>
        <option
          value="Botswana"
        >
          Botswana
        </option>
        <option
          value="Brazil"
        >
          Brazil
        </option>
        <option
          value="Brunei"
        >
          Brunei
        </option>
        <option
          value="Bulgaria"
        >
          Bulgaria
        </option>
        <option
          value="Burkina"
        >
          Burkina
        </option>
        <option
          value="Burundi"
        >
          Burundi
        </option>
        <option
          value="Cambodia"
        >
          Cambodia
        </option>
        <option
          value="Cameroon"
        >
          Cameroon
        </option>
        <option
          value="Canada"
        >
          Canada
        </option>
        <option
          value="Cape Verde"
        >
          Cape Verde
        </option>
        <option
          value="Central African Rep"
        >
          Central African Rep
        </option>
        <option
          value="Chad"
        >
          Chad
        </option>
        <option
          value="Chile"
        >
          Chile
        </option>
        <option
          value="China"
        >
          China
        </option>
        <option
          value="Colombia"
        >
          Colombia
        </option>
        <option
          value="Comoros"
        >
          Comoros
        </option>
        <option
          value="Congo"
        >
          Congo
        </option>
        <option
          value="Congo {Democratic Rep}"
        >
          Congo {Democratic Rep}
        </option>
        <option
          value="Costa Rica"
        >
          Costa Rica
        </option>
        <option
          value="Croatia"
        >
          Croatia
        </option>
        <option
          value="Cuba"
        >
          Cuba
        </option>
        <option
          value="Cyprus"
        >
          Cyprus
        </option>
        <option
          value="Czech Republic"
        >
          Czech Republic
        </option>
        <option
          value="Denmark"
        >
          Denmark
        </option>
        <option
          value="Djibouti"
        >
          Djibouti
        </option>
        <option
          value="Dominica"
        >
          Dominica
        </option>
        <option
          value="Dominican Republic"
        >
          Dominican Republic
        </option>
        <option
          value="East Timor"
        >
          East Timor
        </option>
        <option
          value="Ecuador"
        >
          Ecuador
        </option>
        <option
          value="Egypt"
        >
          Egypt
        </option>
        <option
          value="El Salvador"
        >
          El Salvador
        </option>
        <option
          value="Equatorial Guinea"
        >
          Equatorial Guinea
        </option>
        <option
          value="Eritrea"
        >
          Eritrea
        </option>
        <option
          value="Estonia"
        >
          Estonia
        </option>
        <option
          value="Ethiopia"
        >
          Ethiopia
        </option>
        <option
          value="Fiji"
        >
          Fiji
        </option>
        <option
          value="Finland"
        >
          Finland
        </option>
        <option
          value="France"
        >
          France
        </option>
        <option
          value="Gabon"
        >
          Gabon
        </option>
        <option
          value="Gambia"
        >
          Gambia
        </option>
        <option
          value="Georgia"
        >
          Georgia
        </option>
        <option
          value="Germany"
        >
          Germany
        </option>
        <option
          value="Ghana"
        >
          Ghana
        </option>
        <option
          value="Greece"
        >
          Greece
        </option>
        <option
          value="Grenada"
        >
          Grenada
        </option>
        <option
          value="Guatemala"
        >
          Guatemala
        </option>
        <option
          value="Guinea"
        >
          Guinea
        </option>
        <option
          value="Guinea-Bissau"
        >
          Guinea-Bissau
        </option>
        <option
          value="Guyana"
        >
          Guyana
        </option>
        <option
          value="Haiti"
        >
          Haiti
        </option>
        <option
          value="Honduras"
        >
          Honduras
        </option>
        <option
          value="Hungary"
        >
          Hungary
        </option>
        <option
          value="Iceland"
        >
          Iceland
        </option>
        <option
          value="India"
        >
          India
        </option>
        <option
          value="Indonesia"
        >
          Indonesia
        </option>
        <option
          value="Iran"
        >
          Iran
        </option>
        <option
          value="Iraq"
        >
          Iraq
        </option>
        <option
          value="Ireland {Republic}"
        >
          Ireland {Republic}
        </option>
        <option
          value="Israel"
        >
          Israel
        </option>
        <option
          value="Italy"
        >
          Italy
        </option>
        <option
          value="Ivory Coast"
        >
          Ivory Coast
        </option>
        <option
          value="Jamaica"
        >
          Jamaica
        </option>
        <option
          value="Japan"
        >
          Japan
        </option>
        <option
          value="Jordan"
        >
          Jordan
        </option>
        <option
          value="Kazakhstan"
        >
          Kazakhstan
        </option>
        <option
          value="Kenya"
        >
          Kenya
        </option>
        <option
          value="Kiribati"
        >
          Kiribati
        </option>
        <option
          value="Korea North"
        >
          Korea North
        </option>
        <option
          value="Korea South"
        >
          Korea South
        </option>
        <option
          value="Kosovo"
        >
          Kosovo
        </option>
        <option
          value="Kuwait"
        >
          Kuwait
        </option>
        <option
          value="Kyrgyzstan"
        >
          Kyrgyzstan
        </option>
        <option
          value="Laos"
        >
          Laos
        </option>
        <option
          value="Latvia"
        >
          Latvia
        </option>
        <option
          value="Lebanon"
        >
          Lebanon
        </option>
        <option
          value="Lesotho"
        >
          Lesotho
        </option>
        <option
          value="Liberia"
        >
          Liberia
        </option>
        <option
          value="Libya"
        >
          Libya
        </option>
        <option
          value="Liechtenstein"
        >
          Liechtenstein
        </option>
        <option
          value="Lithuania"
        >
          Lithuania
        </option>
        <option
          value="Luxembourg"
        >
          Luxembourg
        </option>
        <option
          value="Macedonia"
        >
          Macedonia
        </option>
        <option
          value="Madagascar"
        >
          Madagascar
        </option>
        <option
          value="Malawi"
        >
          Malawi
        </option>
        <option
          value="Malaysia"
        >
          Malaysia
        </option>
        <option
          value="Maldives"
        >
          Maldives
        </option>
        <option
          value="Mali"
        >
          Mali
        </option>
        <option
          value="Malta"
        >
          Malta
        </option>
        <option
          value="Marshall Islands"
        >
          Marshall Islands
        </option>
        <option
          value="Mauritania"
        >
          Mauritania
        </option>
        <option
          value="Mauritius"
        >
          Mauritius
        </option>
        <option
          value="Mexico"
        >
          Mexico
        </option>
        <option
          value="Micronesia"
        >
          Micronesia
        </option>
        <option
          value="Moldova"
        >
          Moldova
        </option>
        <option
          value="Monaco"
        >
          Monaco
        </option>
        <option
          value="Mongolia"
        >
          Mongolia
        </option>
        <option
          value="Montenegro"
        >
          Montenegro
        </option>
        <option
          value="Morocco"
        >
          Morocco
        </option>
        <option
          value="Mozambique"
        >
          Mozambique
        </option>
        <option
          value="Myanmar"
        >
          Myanmar
        </option>
        <option
          value="Namibia"
        >
          Namibia
        </option>
        <option
          value="Nauru"
        >
          Nauru
        </option>
        <option
          value="Nepal"
        >
          Nepal
        </option>
        <option
          value="Netherlands"
        >
          Netherlands
        </option>
        <option
          value="New Zealand"
        >
          New Zealand
        </option>
        <option
          value="Nicaragua"
        >
          Nicaragua
        </option>
        <option
          value="Niger"
        >
          Niger
        </option>
        <option
          value="Nigeria"
        >
          Nigeria
        </option>
        <option
          value="Norway"
        >
          Norway
        </option>
        <option
          value="Oman"
        >
          Oman
        </option>
        <option
          value="Pakistan"
        >
          Pakistan
        </option>
        <option
          value="Palau"
        >
          Palau
        </option>
        <option
          value="Panama"
        >
          Panama
        </option>
        <option
          value="Papua New Guinea"
        >
          Papua New Guinea
        </option>
        <option
          value="Paraguay"
        >
          Paraguay
        </option>
        <option
          value="Peru"
        >
          Peru
        </option>
        <option
          value="Philippines"
        >
          Philippines
        </option>
        <option
          value="Poland"
        >
          Poland
        </option>
        <option
          value="Portugal"
        >
          Portugal
        </option>
        <option
          value="Qatar"
        >
          Qatar
        </option>
        <option
          value="Romania"
        >
          Romania
        </option>
        <option
          value="Russian Federation"
        >
          Russian Federation
        </option>
        <option
          value="Rwanda"
        >
          Rwanda
        </option>
        <option
          value="St Kitts & Nevis"
        >
          St Kitts & Nevis
        </option>
        <option
          value="St Lucia"
        >
          St Lucia
        </option>
        <option
          value="Saint Vincent & the Grenadines"
        >
          Saint Vincent & the Grenadines
        </option>
        <option
          value="Samoa"
        >
          Samoa
        </option>
        <option
          value="San Marino"
        >
          San Marino
        </option>
        <option
          value="Sao Tome & Principe"
        >
          Sao Tome & Principe
        </option>
        <option
          value="Saudi Arabia"
        >
          Saudi Arabia
        </option>
        <option
          value="Senegal"
        >
          Senegal
        </option>
        <option
          value="Serbia"
        >
          Serbia
        </option>
        <option
          value="Seychelles"
        >
          Seychelles
        </option>
        <option
          value="Sierra Leone"
        >
          Sierra Leone
        </option>
        <option
          value="Singapore"
        >
          Singapore
        </option>
        <option
          value="Slovakia"
        >
          Slovakia
        </option>
        <option
          value="Slovenia"
        >
          Slovenia
        </option>
        <option
          value="Solomon Islands"
        >
          Solomon Islands
        </option>
        <option
          value="Somalia"
        >
          Somalia
        </option>
        <option
          value="South Africa"
        >
          South Africa
        </option>
        <option
          value="South Sudan"
        >
          South Sudan
        </option>
        <option
          value="Spain"
        >
          Spain
        </option>
        <option
          value="Sri Lanka"
        >
          Sri Lanka
        </option>
        <option
          value="Sudan"
        >
          Sudan
        </option>
        <option
          value="Suriname"
        >
          Suriname
        </option>
        <option
          value="Swaziland"
        >
          Swaziland
        </option>
        <option
          value="Sweden"
        >
          Sweden
        </option>
        <option
          value="Switzerland"
        >
          Switzerland
        </option>
        <option
          value="Syria"
        >
          Syria
        </option>
        <option
          value="Taiwan"
        >
          Taiwan
        </option>
        <option
          value="Tajikistan"
        >
          Tajikistan
        </option>
        <option
          value="Tanzania"
        >
          Tanzania
        </option>
        <option
          value="Thailand"
        >
          Thailand
        </option>
        <option
          value="Togo"
        >
          Togo
        </option>
        <option
          value="Tonga"
        >
          Tonga
        </option>
        <option
          value="Trinidad & Tobago"
        >
          Trinidad & Tobago
        </option>
        <option
          value="Tunisia"
        >
          Tunisia
        </option>
        <option
          value="Turkey"
        >
          Turkey
        </option>
        <option
          value="Turkmenistan"
        >
          Turkmenistan
        </option>
        <option
          value="Tuvalu"
        >
          Tuvalu
        </option>
        <option
          value="Uganda"
        >
          Uganda
        </option>
        <option
          value="Ukraine"
        >
          Ukraine
        </option>
        <option
          value="United Arab Emirates"
        >
          United Arab Emirates
        </option>
        <option
          value="United Kingdom"
        >
          United Kingdom
        </option>
        <option
          value="United States"
        >
          United States
        </option>
        <option
          value="Uruguay"
        >
          Uruguay
        </option>
        <option
          value="Uzbekistan"
        >
          Uzbekistan
        </option>
        <option
          value="Vanuatu"
        >
          Vanuatu
        </option>
        <option
          value="Vatican City"
        >
          Vatican City
        </option>
        <option
          value="Venezuela"
        >
          Venezuela
        </option>
        <option
          value="Vietnam"
        >
          Vietnam
        </option>
        <option
          value="Yemen"
        >
          Yemen
        </option>
        <option
          value="Zambia"
        >
          Zambia
        </option>
        <option
          value="Zimbabwe"
        >
          Zimbabwe
        </option>
      </select>
      <span
        class="sc-fubCfw kxTiMr"
      >
        Where are they based?
      </span>
    </label>
    <label
      class="sc-jrAGrp ieNyNc"
    >
      <span
        class="sc-kEjbxe fqTkVY"
      >
        Salary
      </span>
      <span
        class="sc-iqHYGH kZrLko"
      >
        <input
          class="sc-crrsfI cZzFYO"
          max="100000000"
          min="0"
          name="salary"
          placeholder="e.g. 5000"
          required=""
          type="number"
          value=""
        />
        <span
          class="sc-dQppl lkFmFs"
        >
          <label
            class="sc-jrAGrp ieNyNc"
          >
            <select
              class="sc-bqyKva iYyJTz sc-bZSQDF cKikdq"
              name="currency"
              required=""
            >
              <option
                value="EUR"
              >
                EUR
              </option>
              <option
                value="USD"
              >
                USD
              </option>
              <option
                value="GBP"
              >
                GBP
              </option>
            </select>
          </label>
        </span>
      </span>
      <span
        class="sc-fubCfw kxTiMr"
      >
        Gross yearly salary
      </span>
    </label>
    <div
      class="sc-gWHgXt jXCrnV"
    >
      <p
        class="sc-bdfBwQ sc-cBNfnY jAfrhP FvUpg"
      >
        Type of employment
      </p>
      <div
        class="sc-citwmv bXtqyI"
      >
        <div
          class="sc-jcVebW divHyd"
        >
          <label
            class="sc-fKFyDc flCNqp"
          >
            <div>
              <div
                class="sc-bdfBwQ fBcJzD"
              >
                Contractor
              </div>
              <div
                class="sc-bdfBwQ sc-gsTCUz fBcJzD hLkbdn"
              >
                Pay your contractors
              </div>
            </div>
            <input
              class="sc-bBXqnf kHDmOT"
              name="employment"
              required=""
              type="radio"
              value="contractor"
            />
            <div
              class="sc-iwyYcG ctdYOl"
            />
          </label>
        </div>
        <div
          class="sc-jcVebW divHyd"
        >
          <label
            class="sc-fKFyDc flCNqp"
          >
            <div>
              <div
                class="sc-bdfBwQ fBcJzD"
              >
                Employee
              </div>
              <div
                class="sc-bdfBwQ sc-gsTCUz fBcJzD hLkbdn"
              >
                Hire and manage remotely
              </div>
            </div>
            <input
              class="sc-bBXqnf kHDmOT"
              name="employment"
              required=""
              type="radio"
              value="employee"
            />
            <div
              class="sc-iwyYcG ctdYOl"
            />
          </label>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`People/Form fire onSubmit with initial data 1`] = `
<div>
  <header
    class="sc-hKgILt gQvQYy"
  >
    <div
      class="sc-dlfnbm sc-eCssSg eGSTIL bbYQtM"
    >
      <a
        class="sc-jSgupP eRMlkk"
        href="#profile-page"
      >
        <span
          class="sc-gKsewC dyXmPG"
        />
        <div
          class="sc-iBPRYJ guClff"
        >
          <span
            class="sc-bdfBwQ iSpnv"
          >
            Julie Howard
          </span>
          <span
            class="sc-bdfBwQ sc-gsTCUz gdLWuU hLkbdn"
          >
            Admin
          </span>
        </div>
      </a>
    </div>
  </header>
  <form
    data-testid="userForm"
    id="userForm"
  >
    <label
      class="sc-jrAGrp ieNyNc"
    >
      <span
        class="sc-kEjbxe fqTkVY"
      >
        Name
      </span>
      <span
        class="sc-iqHYGH kZrLko"
      >
        <input
          class="sc-crrsfI cZzFYO"
          name="name"
          placeholder="e.g. Kim Fog"
          required=""
          type="text"
          value="Ann Henry"
        />
      </span>
      <span
        class="sc-fubCfw kxTiMr"
      >
        First and last name
      </span>
    </label>
    <label
      class="sc-jrAGrp ieNyNc"
    >
      <span
        class="sc-kEjbxe fqTkVY"
      >
        Job title
      </span>
      <span
        class="sc-iqHYGH kZrLko"
      >
        <input
          class="sc-crrsfI cZzFYO"
          name="jobTitle"
          placeholder="e.g. Product Manager"
          required=""
          type="text"
          value="Product manager"
        />
      </span>
      <span
        class="sc-fubCfw kxTiMr"
      >
        What is their role?
      </span>
    </label>
    <label
      class="sc-jrAGrp ieNyNc"
    >
      <span
        class="sc-kEjbxe fqTkVY"
      >
        Country
      </span>
      <select
        class="sc-bqyKva iYyJTz"
        name="country"
        required=""
      >
        <option
          hidden=""
          value=""
        >
          Select country
        </option>
        <option
          value="Afghanistan"
        >
          Afghanistan
        </option>
        <option
          value="Albania"
        >
          Albania
        </option>
        <option
          value="Algeria"
        >
          Algeria
        </option>
        <option
          value="Andorra"
        >
          Andorra
        </option>
        <option
          value="Angola"
        >
          Angola
        </option>
        <option
          value="Antigua & Deps"
        >
          Antigua & Deps
        </option>
        <option
          value="Argentina"
        >
          Argentina
        </option>
        <option
          value="Armenia"
        >
          Armenia
        </option>
        <option
          value="Australia"
        >
          Australia
        </option>
        <option
          value="Austria"
        >
          Austria
        </option>
        <option
          value="Azerbaijan"
        >
          Azerbaijan
        </option>
        <option
          value="Bahamas"
        >
          Bahamas
        </option>
        <option
          value="Bahrain"
        >
          Bahrain
        </option>
        <option
          value="Bangladesh"
        >
          Bangladesh
        </option>
        <option
          value="Barbados"
        >
          Barbados
        </option>
        <option
          value="Belarus"
        >
          Belarus
        </option>
        <option
          value="Belgium"
        >
          Belgium
        </option>
        <option
          value="Belize"
        >
          Belize
        </option>
        <option
          value="Benin"
        >
          Benin
        </option>
        <option
          value="Bhutan"
        >
          Bhutan
        </option>
        <option
          value="Bolivia"
        >
          Bolivia
        </option>
        <option
          value="Bosnia Herzegovina"
        >
          Bosnia Herzegovina
        </option>
        <option
          value="Botswana"
        >
          Botswana
        </option>
        <option
          value="Brazil"
        >
          Brazil
        </option>
        <option
          value="Brunei"
        >
          Brunei
        </option>
        <option
          value="Bulgaria"
        >
          Bulgaria
        </option>
        <option
          value="Burkina"
        >
          Burkina
        </option>
        <option
          value="Burundi"
        >
          Burundi
        </option>
        <option
          value="Cambodia"
        >
          Cambodia
        </option>
        <option
          value="Cameroon"
        >
          Cameroon
        </option>
        <option
          value="Canada"
        >
          Canada
        </option>
        <option
          value="Cape Verde"
        >
          Cape Verde
        </option>
        <option
          value="Central African Rep"
        >
          Central African Rep
        </option>
        <option
          value="Chad"
        >
          Chad
        </option>
        <option
          value="Chile"
        >
          Chile
        </option>
        <option
          value="China"
        >
          China
        </option>
        <option
          value="Colombia"
        >
          Colombia
        </option>
        <option
          value="Comoros"
        >
          Comoros
        </option>
        <option
          value="Congo"
        >
          Congo
        </option>
        <option
          value="Congo {Democratic Rep}"
        >
          Congo {Democratic Rep}
        </option>
        <option
          value="Costa Rica"
        >
          Costa Rica
        </option>
        <option
          value="Croatia"
        >
          Croatia
        </option>
        <option
          value="Cuba"
        >
          Cuba
        </option>
        <option
          value="Cyprus"
        >
          Cyprus
        </option>
        <option
          value="Czech Republic"
        >
          Czech Republic
        </option>
        <option
          value="Denmark"
        >
          Denmark
        </option>
        <option
          value="Djibouti"
        >
          Djibouti
        </option>
        <option
          value="Dominica"
        >
          Dominica
        </option>
        <option
          value="Dominican Republic"
        >
          Dominican Republic
        </option>
        <option
          value="East Timor"
        >
          East Timor
        </option>
        <option
          value="Ecuador"
        >
          Ecuador
        </option>
        <option
          value="Egypt"
        >
          Egypt
        </option>
        <option
          value="El Salvador"
        >
          El Salvador
        </option>
        <option
          value="Equatorial Guinea"
        >
          Equatorial Guinea
        </option>
        <option
          value="Eritrea"
        >
          Eritrea
        </option>
        <option
          value="Estonia"
        >
          Estonia
        </option>
        <option
          value="Ethiopia"
        >
          Ethiopia
        </option>
        <option
          value="Fiji"
        >
          Fiji
        </option>
        <option
          value="Finland"
        >
          Finland
        </option>
        <option
          value="France"
        >
          France
        </option>
        <option
          value="Gabon"
        >
          Gabon
        </option>
        <option
          value="Gambia"
        >
          Gambia
        </option>
        <option
          value="Georgia"
        >
          Georgia
        </option>
        <option
          selected=""
          value="Germany"
        >
          Germany
        </option>
        <option
          value="Ghana"
        >
          Ghana
        </option>
        <option
          value="Greece"
        >
          Greece
        </option>
        <option
          value="Grenada"
        >
          Grenada
        </option>
        <option
          value="Guatemala"
        >
          Guatemala
        </option>
        <option
          value="Guinea"
        >
          Guinea
        </option>
        <option
          value="Guinea-Bissau"
        >
          Guinea-Bissau
        </option>
        <option
          value="Guyana"
        >
          Guyana
        </option>
        <option
          value="Haiti"
        >
          Haiti
        </option>
        <option
          value="Honduras"
        >
          Honduras
        </option>
        <option
          value="Hungary"
        >
          Hungary
        </option>
        <option
          value="Iceland"
        >
          Iceland
        </option>
        <option
          value="India"
        >
          India
        </option>
        <option
          value="Indonesia"
        >
          Indonesia
        </option>
        <option
          value="Iran"
        >
          Iran
        </option>
        <option
          value="Iraq"
        >
          Iraq
        </option>
        <option
          value="Ireland {Republic}"
        >
          Ireland {Republic}
        </option>
        <option
          value="Israel"
        >
          Israel
        </option>
        <option
          value="Italy"
        >
          Italy
        </option>
        <option
          value="Ivory Coast"
        >
          Ivory Coast
        </option>
        <option
          value="Jamaica"
        >
          Jamaica
        </option>
        <option
          value="Japan"
        >
          Japan
        </option>
        <option
          value="Jordan"
        >
          Jordan
        </option>
        <option
          value="Kazakhstan"
        >
          Kazakhstan
        </option>
        <option
          value="Kenya"
        >
          Kenya
        </option>
        <option
          value="Kiribati"
        >
          Kiribati
        </option>
        <option
          value="Korea North"
        >
          Korea North
        </option>
        <option
          value="Korea South"
        >
          Korea South
        </option>
        <option
          value="Kosovo"
        >
          Kosovo
        </option>
        <option
          value="Kuwait"
        >
          Kuwait
        </option>
        <option
          value="Kyrgyzstan"
        >
          Kyrgyzstan
        </option>
        <option
          value="Laos"
        >
          Laos
        </option>
        <option
          value="Latvia"
        >
          Latvia
        </option>
        <option
          value="Lebanon"
        >
          Lebanon
        </option>
        <option
          value="Lesotho"
        >
          Lesotho
        </option>
        <option
          value="Liberia"
        >
          Liberia
        </option>
        <option
          value="Libya"
        >
          Libya
        </option>
        <option
          value="Liechtenstein"
        >
          Liechtenstein
        </option>
        <option
          value="Lithuania"
        >
          Lithuania
        </option>
        <option
          value="Luxembourg"
        >
          Luxembourg
        </option>
        <option
          value="Macedonia"
        >
          Macedonia
        </option>
        <option
          value="Madagascar"
        >
          Madagascar
        </option>
        <option
          value="Malawi"
        >
          Malawi
        </option>
        <option
          value="Malaysia"
        >
          Malaysia
        </option>
        <option
          value="Maldives"
        >
          Maldives
        </option>
        <option
          value="Mali"
        >
          Mali
        </option>
        <option
          value="Malta"
        >
          Malta
        </option>
        <option
          value="Marshall Islands"
        >
          Marshall Islands
        </option>
        <option
          value="Mauritania"
        >
          Mauritania
        </option>
        <option
          value="Mauritius"
        >
          Mauritius
        </option>
        <option
          value="Mexico"
        >
          Mexico
        </option>
        <option
          value="Micronesia"
        >
          Micronesia
        </option>
        <option
          value="Moldova"
        >
          Moldova
        </option>
        <option
          value="Monaco"
        >
          Monaco
        </option>
        <option
          value="Mongolia"
        >
          Mongolia
        </option>
        <option
          value="Montenegro"
        >
          Montenegro
        </option>
        <option
          value="Morocco"
        >
          Morocco
        </option>
        <option
          value="Mozambique"
        >
          Mozambique
        </option>
        <option
          value="Myanmar"
        >
          Myanmar
        </option>
        <option
          value="Namibia"
        >
          Namibia
        </option>
        <option
          value="Nauru"
        >
          Nauru
        </option>
        <option
          value="Nepal"
        >
          Nepal
        </option>
        <option
          value="Netherlands"
        >
          Netherlands
        </option>
        <option
          value="New Zealand"
        >
          New Zealand
        </option>
        <option
          value="Nicaragua"
        >
          Nicaragua
        </option>
        <option
          value="Niger"
        >
          Niger
        </option>
        <option
          value="Nigeria"
        >
          Nigeria
        </option>
        <option
          value="Norway"
        >
          Norway
        </option>
        <option
          value="Oman"
        >
          Oman
        </option>
        <option
          value="Pakistan"
        >
          Pakistan
        </option>
        <option
          value="Palau"
        >
          Palau
        </option>
        <option
          value="Panama"
        >
          Panama
        </option>
        <option
          value="Papua New Guinea"
        >
          Papua New Guinea
        </option>
        <option
          value="Paraguay"
        >
          Paraguay
        </option>
        <option
          value="Peru"
        >
          Peru
        </option>
        <option
          value="Philippines"
        >
          Philippines
        </option>
        <option
          value="Poland"
        >
          Poland
        </option>
        <option
          value="Portugal"
        >
          Portugal
        </option>
        <option
          value="Qatar"
        >
          Qatar
        </option>
        <option
          value="Romania"
        >
          Romania
        </option>
        <option
          value="Russian Federation"
        >
          Russian Federation
        </option>
        <option
          value="Rwanda"
        >
          Rwanda
        </option>
        <option
          value="St Kitts & Nevis"
        >
          St Kitts & Nevis
        </option>
        <option
          value="St Lucia"
        >
          St Lucia
        </option>
        <option
          value="Saint Vincent & the Grenadines"
        >
          Saint Vincent & the Grenadines
        </option>
        <option
          value="Samoa"
        >
          Samoa
        </option>
        <option
          value="San Marino"
        >
          San Marino
        </option>
        <option
          value="Sao Tome & Principe"
        >
          Sao Tome & Principe
        </option>
        <option
          value="Saudi Arabia"
        >
          Saudi Arabia
        </option>
        <option
          value="Senegal"
        >
          Senegal
        </option>
        <option
          value="Serbia"
        >
          Serbia
        </option>
        <option
          value="Seychelles"
        >
          Seychelles
        </option>
        <option
          value="Sierra Leone"
        >
          Sierra Leone
        </option>
        <option
          value="Singapore"
        >
          Singapore
        </option>
        <option
          value="Slovakia"
        >
          Slovakia
        </option>
        <option
          value="Slovenia"
        >
          Slovenia
        </option>
        <option
          value="Solomon Islands"
        >
          Solomon Islands
        </option>
        <option
          value="Somalia"
        >
          Somalia
        </option>
        <option
          value="South Africa"
        >
          South Africa
        </option>
        <option
          value="South Sudan"
        >
          South Sudan
        </option>
        <option
          value="Spain"
        >
          Spain
        </option>
        <option
          value="Sri Lanka"
        >
          Sri Lanka
        </option>
        <option
          value="Sudan"
        >
          Sudan
        </option>
        <option
          value="Suriname"
        >
          Suriname
        </option>
        <option
          value="Swaziland"
        >
          Swaziland
        </option>
        <option
          value="Sweden"
        >
          Sweden
        </option>
        <option
          value="Switzerland"
        >
          Switzerland
        </option>
        <option
          value="Syria"
        >
          Syria
        </option>
        <option
          value="Taiwan"
        >
          Taiwan
        </option>
        <option
          value="Tajikistan"
        >
          Tajikistan
        </option>
        <option
          value="Tanzania"
        >
          Tanzania
        </option>
        <option
          value="Thailand"
        >
          Thailand
        </option>
        <option
          value="Togo"
        >
          Togo
        </option>
        <option
          value="Tonga"
        >
          Tonga
        </option>
        <option
          value="Trinidad & Tobago"
        >
          Trinidad & Tobago
        </option>
        <option
          value="Tunisia"
        >
          Tunisia
        </option>
        <option
          value="Turkey"
        >
          Turkey
        </option>
        <option
          value="Turkmenistan"
        >
          Turkmenistan
        </option>
        <option
          value="Tuvalu"
        >
          Tuvalu
        </option>
        <option
          value="Uganda"
        >
          Uganda
        </option>
        <option
          value="Ukraine"
        >
          Ukraine
        </option>
        <option
          value="United Arab Emirates"
        >
          United Arab Emirates
        </option>
        <option
          value="United Kingdom"
        >
          United Kingdom
        </option>
        <option
          value="United States"
        >
          United States
        </option>
        <option
          value="Uruguay"
        >
          Uruguay
        </option>
        <option
          value="Uzbekistan"
        >
          Uzbekistan
        </option>
        <option
          value="Vanuatu"
        >
          Vanuatu
        </option>
        <option
          value="Vatican City"
        >
          Vatican City
        </option>
        <option
          value="Venezuela"
        >
          Venezuela
        </option>
        <option
          value="Vietnam"
        >
          Vietnam
        </option>
        <option
          value="Yemen"
        >
          Yemen
        </option>
        <option
          value="Zambia"
        >
          Zambia
        </option>
        <option
          value="Zimbabwe"
        >
          Zimbabwe
        </option>
      </select>
      <span
        class="sc-fubCfw kxTiMr"
      >
        Where are they based?
      </span>
    </label>
    <label
      class="sc-jrAGrp ieNyNc"
    >
      <span
        class="sc-kEjbxe fqTkVY"
      >
        Salary
      </span>
      <span
        class="sc-iqHYGH kZrLko"
      >
        <input
          class="sc-crrsfI cZzFYO"
          max="100000000"
          min="0"
          name="salary"
          placeholder="e.g. 5000"
          required=""
          type="number"
          value="120000"
        />
        <span
          class="sc-dQppl lkFmFs"
        >
          <label
            class="sc-jrAGrp ieNyNc"
          >
            <select
              class="sc-bqyKva iYyJTz sc-bZSQDF cKikdq"
              name="currency"
              required=""
            >
              <option
                selected=""
                value="EUR"
              >
                EUR
              </option>
              <option
                value="USD"
              >
                USD
              </option>
              <option
                value="GBP"
              >
                GBP
              </option>
            </select>
          </label>
        </span>
      </span>
      <span
        class="sc-fubCfw kxTiMr"
      >
        Gross yearly salary
      </span>
    </label>
    <div
      class="sc-gWHgXt jXCrnV"
    >
      <p
        class="sc-bdfBwQ sc-cBNfnY jAfrhP FvUpg"
      >
        Type of employment
      </p>
      <div
        class="sc-citwmv bXtqyI"
      >
        <div
          class="sc-jcVebW divHyd"
        >
          <label
            class="sc-fKFyDc flCNqp"
          >
            <div>
              <div
                class="sc-bdfBwQ fBcJzD"
              >
                Contractor
              </div>
              <div
                class="sc-bdfBwQ sc-gsTCUz fBcJzD hLkbdn"
              >
                Pay your contractors
              </div>
            </div>
            <input
              class="sc-bBXqnf kHDmOT"
              name="employment"
              required=""
              type="radio"
              value="contractor"
            />
            <div
              class="sc-iwyYcG ctdYOl"
            />
          </label>
        </div>
        <div
          class="sc-jcVebW dFDGDZ"
        >
          <label
            class="sc-fKFyDc flCNqp"
          >
            <div>
              <div
                class="sc-bdfBwQ fBcJzD"
              >
                Employee
              </div>
              <div
                class="sc-bdfBwQ sc-gsTCUz fBcJzD hLkbdn"
              >
                Hire and manage remotely
              </div>
            </div>
            <input
              checked=""
              class="sc-bBXqnf kHDmOT"
              name="employment"
              required=""
              type="radio"
              value="employee"
            />
            <div
              class="sc-iwyYcG iyinhW"
            />
          </label>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`People/Form fire onSubmit without initial data 1`] = `
<div>
  <header
    class="sc-hKgILt gQvQYy"
  >
    <div
      class="sc-dlfnbm sc-eCssSg eGSTIL bbYQtM"
    >
      <a
        class="sc-jSgupP eRMlkk"
        href="#profile-page"
      >
        <span
          class="sc-gKsewC dyXmPG"
        />
        <div
          class="sc-iBPRYJ guClff"
        >
          <span
            class="sc-bdfBwQ iSpnv"
          >
            Julie Howard
          </span>
          <span
            class="sc-bdfBwQ sc-gsTCUz gdLWuU hLkbdn"
          >
            Admin
          </span>
        </div>
      </a>
    </div>
  </header>
  <form
    data-testid="userForm"
    id="userForm"
  >
    <label
      class="sc-jrAGrp ieNyNc"
    >
      <span
        class="sc-kEjbxe fqTkVY"
      >
        Name
      </span>
      <span
        class="sc-iqHYGH kZrLko"
      >
        <input
          class="sc-crrsfI cZzFYO"
          name="name"
          placeholder="e.g. Kim Fog"
          required=""
          type="text"
          value=""
        />
      </span>
      <span
        class="sc-fubCfw kxTiMr"
      >
        First and last name
      </span>
    </label>
    <label
      class="sc-jrAGrp ieNyNc"
    >
      <span
        class="sc-kEjbxe fqTkVY"
      >
        Job title
      </span>
      <span
        class="sc-iqHYGH kZrLko"
      >
        <input
          class="sc-crrsfI cZzFYO"
          name="jobTitle"
          placeholder="e.g. Product Manager"
          required=""
          type="text"
          value=""
        />
      </span>
      <span
        class="sc-fubCfw kxTiMr"
      >
        What is their role?
      </span>
    </label>
    <label
      class="sc-jrAGrp ieNyNc"
    >
      <span
        class="sc-kEjbxe fqTkVY"
      >
        Country
      </span>
      <select
        class="sc-bqyKva iYyJTz"
        name="country"
        required=""
      >
        <option
          hidden=""
          value=""
        >
          Select country
        </option>
        <option
          value="Afghanistan"
        >
          Afghanistan
        </option>
        <option
          value="Albania"
        >
          Albania
        </option>
        <option
          value="Algeria"
        >
          Algeria
        </option>
        <option
          value="Andorra"
        >
          Andorra
        </option>
        <option
          value="Angola"
        >
          Angola
        </option>
        <option
          value="Antigua & Deps"
        >
          Antigua & Deps
        </option>
        <option
          value="Argentina"
        >
          Argentina
        </option>
        <option
          value="Armenia"
        >
          Armenia
        </option>
        <option
          value="Australia"
        >
          Australia
        </option>
        <option
          value="Austria"
        >
          Austria
        </option>
        <option
          value="Azerbaijan"
        >
          Azerbaijan
        </option>
        <option
          value="Bahamas"
        >
          Bahamas
        </option>
        <option
          value="Bahrain"
        >
          Bahrain
        </option>
        <option
          value="Bangladesh"
        >
          Bangladesh
        </option>
        <option
          value="Barbados"
        >
          Barbados
        </option>
        <option
          value="Belarus"
        >
          Belarus
        </option>
        <option
          value="Belgium"
        >
          Belgium
        </option>
        <option
          value="Belize"
        >
          Belize
        </option>
        <option
          value="Benin"
        >
          Benin
        </option>
        <option
          value="Bhutan"
        >
          Bhutan
        </option>
        <option
          value="Bolivia"
        >
          Bolivia
        </option>
        <option
          value="Bosnia Herzegovina"
        >
          Bosnia Herzegovina
        </option>
        <option
          value="Botswana"
        >
          Botswana
        </option>
        <option
          value="Brazil"
        >
          Brazil
        </option>
        <option
          value="Brunei"
        >
          Brunei
        </option>
        <option
          value="Bulgaria"
        >
          Bulgaria
        </option>
        <option
          value="Burkina"
        >
          Burkina
        </option>
        <option
          value="Burundi"
        >
          Burundi
        </option>
        <option
          value="Cambodia"
        >
          Cambodia
        </option>
        <option
          value="Cameroon"
        >
          Cameroon
        </option>
        <option
          value="Canada"
        >
          Canada
        </option>
        <option
          value="Cape Verde"
        >
          Cape Verde
        </option>
        <option
          value="Central African Rep"
        >
          Central African Rep
        </option>
        <option
          value="Chad"
        >
          Chad
        </option>
        <option
          value="Chile"
        >
          Chile
        </option>
        <option
          value="China"
        >
          China
        </option>
        <option
          value="Colombia"
        >
          Colombia
        </option>
        <option
          value="Comoros"
        >
          Comoros
        </option>
        <option
          value="Congo"
        >
          Congo
        </option>
        <option
          value="Congo {Democratic Rep}"
        >
          Congo {Democratic Rep}
        </option>
        <option
          value="Costa Rica"
        >
          Costa Rica
        </option>
        <option
          value="Croatia"
        >
          Croatia
        </option>
        <option
          value="Cuba"
        >
          Cuba
        </option>
        <option
          value="Cyprus"
        >
          Cyprus
        </option>
        <option
          value="Czech Republic"
        >
          Czech Republic
        </option>
        <option
          value="Denmark"
        >
          Denmark
        </option>
        <option
          value="Djibouti"
        >
          Djibouti
        </option>
        <option
          value="Dominica"
        >
          Dominica
        </option>
        <option
          value="Dominican Republic"
        >
          Dominican Republic
        </option>
        <option
          value="East Timor"
        >
          East Timor
        </option>
        <option
          value="Ecuador"
        >
          Ecuador
        </option>
        <option
          value="Egypt"
        >
          Egypt
        </option>
        <option
          value="El Salvador"
        >
          El Salvador
        </option>
        <option
          value="Equatorial Guinea"
        >
          Equatorial Guinea
        </option>
        <option
          value="Eritrea"
        >
          Eritrea
        </option>
        <option
          value="Estonia"
        >
          Estonia
        </option>
        <option
          value="Ethiopia"
        >
          Ethiopia
        </option>
        <option
          value="Fiji"
        >
          Fiji
        </option>
        <option
          value="Finland"
        >
          Finland
        </option>
        <option
          value="France"
        >
          France
        </option>
        <option
          value="Gabon"
        >
          Gabon
        </option>
        <option
          value="Gambia"
        >
          Gambia
        </option>
        <option
          value="Georgia"
        >
          Georgia
        </option>
        <option
          value="Germany"
        >
          Germany
        </option>
        <option
          value="Ghana"
        >
          Ghana
        </option>
        <option
          value="Greece"
        >
          Greece
        </option>
        <option
          value="Grenada"
        >
          Grenada
        </option>
        <option
          value="Guatemala"
        >
          Guatemala
        </option>
        <option
          value="Guinea"
        >
          Guinea
        </option>
        <option
          value="Guinea-Bissau"
        >
          Guinea-Bissau
        </option>
        <option
          value="Guyana"
        >
          Guyana
        </option>
        <option
          value="Haiti"
        >
          Haiti
        </option>
        <option
          value="Honduras"
        >
          Honduras
        </option>
        <option
          value="Hungary"
        >
          Hungary
        </option>
        <option
          value="Iceland"
        >
          Iceland
        </option>
        <option
          value="India"
        >
          India
        </option>
        <option
          value="Indonesia"
        >
          Indonesia
        </option>
        <option
          value="Iran"
        >
          Iran
        </option>
        <option
          value="Iraq"
        >
          Iraq
        </option>
        <option
          value="Ireland {Republic}"
        >
          Ireland {Republic}
        </option>
        <option
          value="Israel"
        >
          Israel
        </option>
        <option
          value="Italy"
        >
          Italy
        </option>
        <option
          value="Ivory Coast"
        >
          Ivory Coast
        </option>
        <option
          value="Jamaica"
        >
          Jamaica
        </option>
        <option
          value="Japan"
        >
          Japan
        </option>
        <option
          value="Jordan"
        >
          Jordan
        </option>
        <option
          value="Kazakhstan"
        >
          Kazakhstan
        </option>
        <option
          value="Kenya"
        >
          Kenya
        </option>
        <option
          value="Kiribati"
        >
          Kiribati
        </option>
        <option
          value="Korea North"
        >
          Korea North
        </option>
        <option
          value="Korea South"
        >
          Korea South
        </option>
        <option
          value="Kosovo"
        >
          Kosovo
        </option>
        <option
          value="Kuwait"
        >
          Kuwait
        </option>
        <option
          value="Kyrgyzstan"
        >
          Kyrgyzstan
        </option>
        <option
          value="Laos"
        >
          Laos
        </option>
        <option
          value="Latvia"
        >
          Latvia
        </option>
        <option
          value="Lebanon"
        >
          Lebanon
        </option>
        <option
          value="Lesotho"
        >
          Lesotho
        </option>
        <option
          value="Liberia"
        >
          Liberia
        </option>
        <option
          value="Libya"
        >
          Libya
        </option>
        <option
          value="Liechtenstein"
        >
          Liechtenstein
        </option>
        <option
          value="Lithuania"
        >
          Lithuania
        </option>
        <option
          value="Luxembourg"
        >
          Luxembourg
        </option>
        <option
          value="Macedonia"
        >
          Macedonia
        </option>
        <option
          value="Madagascar"
        >
          Madagascar
        </option>
        <option
          value="Malawi"
        >
          Malawi
        </option>
        <option
          value="Malaysia"
        >
          Malaysia
        </option>
        <option
          value="Maldives"
        >
          Maldives
        </option>
        <option
          value="Mali"
        >
          Mali
        </option>
        <option
          value="Malta"
        >
          Malta
        </option>
        <option
          value="Marshall Islands"
        >
          Marshall Islands
        </option>
        <option
          value="Mauritania"
        >
          Mauritania
        </option>
        <option
          value="Mauritius"
        >
          Mauritius
        </option>
        <option
          value="Mexico"
        >
          Mexico
        </option>
        <option
          value="Micronesia"
        >
          Micronesia
        </option>
        <option
          value="Moldova"
        >
          Moldova
        </option>
        <option
          value="Monaco"
        >
          Monaco
        </option>
        <option
          value="Mongolia"
        >
          Mongolia
        </option>
        <option
          value="Montenegro"
        >
          Montenegro
        </option>
        <option
          value="Morocco"
        >
          Morocco
        </option>
        <option
          value="Mozambique"
        >
          Mozambique
        </option>
        <option
          value="Myanmar"
        >
          Myanmar
        </option>
        <option
          value="Namibia"
        >
          Namibia
        </option>
        <option
          value="Nauru"
        >
          Nauru
        </option>
        <option
          value="Nepal"
        >
          Nepal
        </option>
        <option
          value="Netherlands"
        >
          Netherlands
        </option>
        <option
          value="New Zealand"
        >
          New Zealand
        </option>
        <option
          value="Nicaragua"
        >
          Nicaragua
        </option>
        <option
          value="Niger"
        >
          Niger
        </option>
        <option
          value="Nigeria"
        >
          Nigeria
        </option>
        <option
          value="Norway"
        >
          Norway
        </option>
        <option
          value="Oman"
        >
          Oman
        </option>
        <option
          value="Pakistan"
        >
          Pakistan
        </option>
        <option
          value="Palau"
        >
          Palau
        </option>
        <option
          value="Panama"
        >
          Panama
        </option>
        <option
          value="Papua New Guinea"
        >
          Papua New Guinea
        </option>
        <option
          value="Paraguay"
        >
          Paraguay
        </option>
        <option
          value="Peru"
        >
          Peru
        </option>
        <option
          value="Philippines"
        >
          Philippines
        </option>
        <option
          value="Poland"
        >
          Poland
        </option>
        <option
          value="Portugal"
        >
          Portugal
        </option>
        <option
          value="Qatar"
        >
          Qatar
        </option>
        <option
          value="Romania"
        >
          Romania
        </option>
        <option
          value="Russian Federation"
        >
          Russian Federation
        </option>
        <option
          value="Rwanda"
        >
          Rwanda
        </option>
        <option
          value="St Kitts & Nevis"
        >
          St Kitts & Nevis
        </option>
        <option
          value="St Lucia"
        >
          St Lucia
        </option>
        <option
          value="Saint Vincent & the Grenadines"
        >
          Saint Vincent & the Grenadines
        </option>
        <option
          value="Samoa"
        >
          Samoa
        </option>
        <option
          value="San Marino"
        >
          San Marino
        </option>
        <option
          value="Sao Tome & Principe"
        >
          Sao Tome & Principe
        </option>
        <option
          value="Saudi Arabia"
        >
          Saudi Arabia
        </option>
        <option
          value="Senegal"
        >
          Senegal
        </option>
        <option
          value="Serbia"
        >
          Serbia
        </option>
        <option
          value="Seychelles"
        >
          Seychelles
        </option>
        <option
          value="Sierra Leone"
        >
          Sierra Leone
        </option>
        <option
          value="Singapore"
        >
          Singapore
        </option>
        <option
          value="Slovakia"
        >
          Slovakia
        </option>
        <option
          value="Slovenia"
        >
          Slovenia
        </option>
        <option
          value="Solomon Islands"
        >
          Solomon Islands
        </option>
        <option
          value="Somalia"
        >
          Somalia
        </option>
        <option
          value="South Africa"
        >
          South Africa
        </option>
        <option
          value="South Sudan"
        >
          South Sudan
        </option>
        <option
          value="Spain"
        >
          Spain
        </option>
        <option
          value="Sri Lanka"
        >
          Sri Lanka
        </option>
        <option
          value="Sudan"
        >
          Sudan
        </option>
        <option
          value="Suriname"
        >
          Suriname
        </option>
        <option
          value="Swaziland"
        >
          Swaziland
        </option>
        <option
          value="Sweden"
        >
          Sweden
        </option>
        <option
          value="Switzerland"
        >
          Switzerland
        </option>
        <option
          value="Syria"
        >
          Syria
        </option>
        <option
          value="Taiwan"
        >
          Taiwan
        </option>
        <option
          value="Tajikistan"
        >
          Tajikistan
        </option>
        <option
          value="Tanzania"
        >
          Tanzania
        </option>
        <option
          value="Thailand"
        >
          Thailand
        </option>
        <option
          value="Togo"
        >
          Togo
        </option>
        <option
          value="Tonga"
        >
          Tonga
        </option>
        <option
          value="Trinidad & Tobago"
        >
          Trinidad & Tobago
        </option>
        <option
          value="Tunisia"
        >
          Tunisia
        </option>
        <option
          value="Turkey"
        >
          Turkey
        </option>
        <option
          value="Turkmenistan"
        >
          Turkmenistan
        </option>
        <option
          value="Tuvalu"
        >
          Tuvalu
        </option>
        <option
          value="Uganda"
        >
          Uganda
        </option>
        <option
          value="Ukraine"
        >
          Ukraine
        </option>
        <option
          value="United Arab Emirates"
        >
          United Arab Emirates
        </option>
        <option
          value="United Kingdom"
        >
          United Kingdom
        </option>
        <option
          value="United States"
        >
          United States
        </option>
        <option
          value="Uruguay"
        >
          Uruguay
        </option>
        <option
          value="Uzbekistan"
        >
          Uzbekistan
        </option>
        <option
          value="Vanuatu"
        >
          Vanuatu
        </option>
        <option
          value="Vatican City"
        >
          Vatican City
        </option>
        <option
          value="Venezuela"
        >
          Venezuela
        </option>
        <option
          value="Vietnam"
        >
          Vietnam
        </option>
        <option
          value="Yemen"
        >
          Yemen
        </option>
        <option
          value="Zambia"
        >
          Zambia
        </option>
        <option
          value="Zimbabwe"
        >
          Zimbabwe
        </option>
      </select>
      <span
        class="sc-fubCfw kxTiMr"
      >
        Where are they based?
      </span>
    </label>
    <label
      class="sc-jrAGrp ieNyNc"
    >
      <span
        class="sc-kEjbxe fqTkVY"
      >
        Salary
      </span>
      <span
        class="sc-iqHYGH kZrLko"
      >
        <input
          class="sc-crrsfI cZzFYO"
          max="100000000"
          min="0"
          name="salary"
          placeholder="e.g. 5000"
          required=""
          type="number"
          value=""
        />
        <span
          class="sc-dQppl lkFmFs"
        >
          <label
            class="sc-jrAGrp ieNyNc"
          >
            <select
              class="sc-bqyKva iYyJTz sc-bZSQDF cKikdq"
              name="currency"
              required=""
            >
              <option
                value="EUR"
              >
                EUR
              </option>
              <option
                value="USD"
              >
                USD
              </option>
              <option
                value="GBP"
              >
                GBP
              </option>
            </select>
          </label>
        </span>
      </span>
      <span
        class="sc-fubCfw kxTiMr"
      >
        Gross yearly salary
      </span>
    </label>
    <div
      class="sc-gWHgXt jXCrnV"
    >
      <p
        class="sc-bdfBwQ sc-cBNfnY jAfrhP FvUpg"
      >
        Type of employment
      </p>
      <div
        class="sc-citwmv bXtqyI"
      >
        <div
          class="sc-jcVebW divHyd"
        >
          <label
            class="sc-fKFyDc flCNqp"
          >
            <div>
              <div
                class="sc-bdfBwQ fBcJzD"
              >
                Contractor
              </div>
              <div
                class="sc-bdfBwQ sc-gsTCUz fBcJzD hLkbdn"
              >
                Pay your contractors
              </div>
            </div>
            <input
              class="sc-bBXqnf kHDmOT"
              name="employment"
              required=""
              type="radio"
              value="contractor"
            />
            <div
              class="sc-iwyYcG ctdYOl"
            />
          </label>
        </div>
        <div
          class="sc-jcVebW dFDGDZ"
        >
          <label
            class="sc-fKFyDc flCNqp"
          >
            <div>
              <div
                class="sc-bdfBwQ fBcJzD"
              >
                Employee
              </div>
              <div
                class="sc-bdfBwQ sc-gsTCUz fBcJzD hLkbdn"
              >
                Hire and manage remotely
              </div>
            </div>
            <input
              class="sc-bBXqnf kHDmOT"
              name="employment"
              required=""
              type="radio"
              value="employee"
            />
            <div
              class="sc-iwyYcG iyinhW"
            />
          </label>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`People/Form loading state 1`] = `
<div>
  <header
    class="sc-hKgILt gQvQYy"
  >
    <div
      class="sc-dlfnbm sc-eCssSg eGSTIL bbYQtM"
    >
      <a
        class="sc-jSgupP eRMlkk"
        href="#profile-page"
      >
        <span
          class="sc-gKsewC dyXmPG"
        />
        <div
          class="sc-iBPRYJ guClff"
        >
          <span
            class="sc-bdfBwQ iSpnv"
          >
            Julie Howard
          </span>
          <span
            class="sc-bdfBwQ sc-gsTCUz gdLWuU hLkbdn"
          >
            Admin
          </span>
        </div>
      </a>
    </div>
  </header>
  <form
    data-testid="userForm"
    id="userForm"
  >
    <div
      class="sc-kLgntA bCmdeF"
    >
      <div
        class="sc-fodVxV ewBWzm"
      >
        <svg
          version="1.1"
          viewBox="0 0 119.9 148.4"
          x="0px"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          y="0px"
        >
          <defs />
          <g>
            <g>
              <path
                class="sc-kstrdz"
                d="M49.1,117.1C41.5,112.7,35.4,106.6,31,99c-4.4-7.6-6.7-15.9-6.7-24.8c0-9.1,2.2-17.4,6.7-25.1 c4.4-7.6,10.5-13.7,18.1-18.1c7.6-4.4,15.9-6.6,24.9-6.7V0C60.7,0,48.3,3.3,37,9.9C25.5,16.5,16.5,25.5,9.9,37 C3.3,48.4,0,60.8,0,74.2c0,13.4,3.3,25.8,9.9,37.1c6.6,11.3,15.6,20.3,27.1,27c11.4,6.7,23.7,10,37.1,10.1v-24.6 C65.1,123.7,56.8,121.5,49.1,117.1z"
              />
            </g>
            <g>
              <path
                class="sc-hBEYos"
                d="M74.1,28.5V120c25.3,0,45.8-20.5,45.8-45.8S99.4,28.5,74.1,28.5z"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
  </form>
</div>
`;

exports[`People/Form renders correctly - new user 1`] = `
<div>
  <header
    class="sc-hKgILt gQvQYy"
  >
    <div
      class="sc-dlfnbm sc-eCssSg eGSTIL bbYQtM"
    >
      <a
        class="sc-jSgupP eRMlkk"
        href="#profile-page"
      >
        <span
          class="sc-gKsewC dyXmPG"
        />
        <div
          class="sc-iBPRYJ guClff"
        >
          <span
            class="sc-bdfBwQ iSpnv"
          >
            Julie Howard
          </span>
          <span
            class="sc-bdfBwQ sc-gsTCUz gdLWuU hLkbdn"
          >
            Admin
          </span>
        </div>
      </a>
    </div>
  </header>
  <form
    data-testid="userForm"
    id="userForm"
  >
    <label
      class="sc-jrAGrp ieNyNc"
    >
      <span
        class="sc-kEjbxe fqTkVY"
      >
        Name
      </span>
      <span
        class="sc-iqHYGH kZrLko"
      >
        <input
          class="sc-crrsfI cZzFYO"
          name="name"
          placeholder="e.g. Kim Fog"
          required=""
          type="text"
          value=""
        />
      </span>
      <span
        class="sc-fubCfw kxTiMr"
      >
        First and last name
      </span>
    </label>
    <label
      class="sc-jrAGrp ieNyNc"
    >
      <span
        class="sc-kEjbxe fqTkVY"
      >
        Job title
      </span>
      <span
        class="sc-iqHYGH kZrLko"
      >
        <input
          class="sc-crrsfI cZzFYO"
          name="jobTitle"
          placeholder="e.g. Product Manager"
          required=""
          type="text"
          value=""
        />
      </span>
      <span
        class="sc-fubCfw kxTiMr"
      >
        What is their role?
      </span>
    </label>
    <label
      class="sc-jrAGrp ieNyNc"
    >
      <span
        class="sc-kEjbxe fqTkVY"
      >
        Country
      </span>
      <select
        class="sc-bqyKva iYyJTz"
        name="country"
        required=""
      >
        <option
          hidden=""
          value=""
        >
          Select country
        </option>
        <option
          value="Afghanistan"
        >
          Afghanistan
        </option>
        <option
          value="Albania"
        >
          Albania
        </option>
        <option
          value="Algeria"
        >
          Algeria
        </option>
        <option
          value="Andorra"
        >
          Andorra
        </option>
        <option
          value="Angola"
        >
          Angola
        </option>
        <option
          value="Antigua & Deps"
        >
          Antigua & Deps
        </option>
        <option
          value="Argentina"
        >
          Argentina
        </option>
        <option
          value="Armenia"
        >
          Armenia
        </option>
        <option
          value="Australia"
        >
          Australia
        </option>
        <option
          value="Austria"
        >
          Austria
        </option>
        <option
          value="Azerbaijan"
        >
          Azerbaijan
        </option>
        <option
          value="Bahamas"
        >
          Bahamas
        </option>
        <option
          value="Bahrain"
        >
          Bahrain
        </option>
        <option
          value="Bangladesh"
        >
          Bangladesh
        </option>
        <option
          value="Barbados"
        >
          Barbados
        </option>
        <option
          value="Belarus"
        >
          Belarus
        </option>
        <option
          value="Belgium"
        >
          Belgium
        </option>
        <option
          value="Belize"
        >
          Belize
        </option>
        <option
          value="Benin"
        >
          Benin
        </option>
        <option
          value="Bhutan"
        >
          Bhutan
        </option>
        <option
          value="Bolivia"
        >
          Bolivia
        </option>
        <option
          value="Bosnia Herzegovina"
        >
          Bosnia Herzegovina
        </option>
        <option
          value="Botswana"
        >
          Botswana
        </option>
        <option
          value="Brazil"
        >
          Brazil
        </option>
        <option
          value="Brunei"
        >
          Brunei
        </option>
        <option
          value="Bulgaria"
        >
          Bulgaria
        </option>
        <option
          value="Burkina"
        >
          Burkina
        </option>
        <option
          value="Burundi"
        >
          Burundi
        </option>
        <option
          value="Cambodia"
        >
          Cambodia
        </option>
        <option
          value="Cameroon"
        >
          Cameroon
        </option>
        <option
          value="Canada"
        >
          Canada
        </option>
        <option
          value="Cape Verde"
        >
          Cape Verde
        </option>
        <option
          value="Central African Rep"
        >
          Central African Rep
        </option>
        <option
          value="Chad"
        >
          Chad
        </option>
        <option
          value="Chile"
        >
          Chile
        </option>
        <option
          value="China"
        >
          China
        </option>
        <option
          value="Colombia"
        >
          Colombia
        </option>
        <option
          value="Comoros"
        >
          Comoros
        </option>
        <option
          value="Congo"
        >
          Congo
        </option>
        <option
          value="Congo {Democratic Rep}"
        >
          Congo {Democratic Rep}
        </option>
        <option
          value="Costa Rica"
        >
          Costa Rica
        </option>
        <option
          value="Croatia"
        >
          Croatia
        </option>
        <option
          value="Cuba"
        >
          Cuba
        </option>
        <option
          value="Cyprus"
        >
          Cyprus
        </option>
        <option
          value="Czech Republic"
        >
          Czech Republic
        </option>
        <option
          value="Denmark"
        >
          Denmark
        </option>
        <option
          value="Djibouti"
        >
          Djibouti
        </option>
        <option
          value="Dominica"
        >
          Dominica
        </option>
        <option
          value="Dominican Republic"
        >
          Dominican Republic
        </option>
        <option
          value="East Timor"
        >
          East Timor
        </option>
        <option
          value="Ecuador"
        >
          Ecuador
        </option>
        <option
          value="Egypt"
        >
          Egypt
        </option>
        <option
          value="El Salvador"
        >
          El Salvador
        </option>
        <option
          value="Equatorial Guinea"
        >
          Equatorial Guinea
        </option>
        <option
          value="Eritrea"
        >
          Eritrea
        </option>
        <option
          value="Estonia"
        >
          Estonia
        </option>
        <option
          value="Ethiopia"
        >
          Ethiopia
        </option>
        <option
          value="Fiji"
        >
          Fiji
        </option>
        <option
          value="Finland"
        >
          Finland
        </option>
        <option
          value="France"
        >
          France
        </option>
        <option
          value="Gabon"
        >
          Gabon
        </option>
        <option
          value="Gambia"
        >
          Gambia
        </option>
        <option
          value="Georgia"
        >
          Georgia
        </option>
        <option
          value="Germany"
        >
          Germany
        </option>
        <option
          value="Ghana"
        >
          Ghana
        </option>
        <option
          value="Greece"
        >
          Greece
        </option>
        <option
          value="Grenada"
        >
          Grenada
        </option>
        <option
          value="Guatemala"
        >
          Guatemala
        </option>
        <option
          value="Guinea"
        >
          Guinea
        </option>
        <option
          value="Guinea-Bissau"
        >
          Guinea-Bissau
        </option>
        <option
          value="Guyana"
        >
          Guyana
        </option>
        <option
          value="Haiti"
        >
          Haiti
        </option>
        <option
          value="Honduras"
        >
          Honduras
        </option>
        <option
          value="Hungary"
        >
          Hungary
        </option>
        <option
          value="Iceland"
        >
          Iceland
        </option>
        <option
          value="India"
        >
          India
        </option>
        <option
          value="Indonesia"
        >
          Indonesia
        </option>
        <option
          value="Iran"
        >
          Iran
        </option>
        <option
          value="Iraq"
        >
          Iraq
        </option>
        <option
          value="Ireland {Republic}"
        >
          Ireland {Republic}
        </option>
        <option
          value="Israel"
        >
          Israel
        </option>
        <option
          value="Italy"
        >
          Italy
        </option>
        <option
          value="Ivory Coast"
        >
          Ivory Coast
        </option>
        <option
          value="Jamaica"
        >
          Jamaica
        </option>
        <option
          value="Japan"
        >
          Japan
        </option>
        <option
          value="Jordan"
        >
          Jordan
        </option>
        <option
          value="Kazakhstan"
        >
          Kazakhstan
        </option>
        <option
          value="Kenya"
        >
          Kenya
        </option>
        <option
          value="Kiribati"
        >
          Kiribati
        </option>
        <option
          value="Korea North"
        >
          Korea North
        </option>
        <option
          value="Korea South"
        >
          Korea South
        </option>
        <option
          value="Kosovo"
        >
          Kosovo
        </option>
        <option
          value="Kuwait"
        >
          Kuwait
        </option>
        <option
          value="Kyrgyzstan"
        >
          Kyrgyzstan
        </option>
        <option
          value="Laos"
        >
          Laos
        </option>
        <option
          value="Latvia"
        >
          Latvia
        </option>
        <option
          value="Lebanon"
        >
          Lebanon
        </option>
        <option
          value="Lesotho"
        >
          Lesotho
        </option>
        <option
          value="Liberia"
        >
          Liberia
        </option>
        <option
          value="Libya"
        >
          Libya
        </option>
        <option
          value="Liechtenstein"
        >
          Liechtenstein
        </option>
        <option
          value="Lithuania"
        >
          Lithuania
        </option>
        <option
          value="Luxembourg"
        >
          Luxembourg
        </option>
        <option
          value="Macedonia"
        >
          Macedonia
        </option>
        <option
          value="Madagascar"
        >
          Madagascar
        </option>
        <option
          value="Malawi"
        >
          Malawi
        </option>
        <option
          value="Malaysia"
        >
          Malaysia
        </option>
        <option
          value="Maldives"
        >
          Maldives
        </option>
        <option
          value="Mali"
        >
          Mali
        </option>
        <option
          value="Malta"
        >
          Malta
        </option>
        <option
          value="Marshall Islands"
        >
          Marshall Islands
        </option>
        <option
          value="Mauritania"
        >
          Mauritania
        </option>
        <option
          value="Mauritius"
        >
          Mauritius
        </option>
        <option
          value="Mexico"
        >
          Mexico
        </option>
        <option
          value="Micronesia"
        >
          Micronesia
        </option>
        <option
          value="Moldova"
        >
          Moldova
        </option>
        <option
          value="Monaco"
        >
          Monaco
        </option>
        <option
          value="Mongolia"
        >
          Mongolia
        </option>
        <option
          value="Montenegro"
        >
          Montenegro
        </option>
        <option
          value="Morocco"
        >
          Morocco
        </option>
        <option
          value="Mozambique"
        >
          Mozambique
        </option>
        <option
          value="Myanmar"
        >
          Myanmar
        </option>
        <option
          value="Namibia"
        >
          Namibia
        </option>
        <option
          value="Nauru"
        >
          Nauru
        </option>
        <option
          value="Nepal"
        >
          Nepal
        </option>
        <option
          value="Netherlands"
        >
          Netherlands
        </option>
        <option
          value="New Zealand"
        >
          New Zealand
        </option>
        <option
          value="Nicaragua"
        >
          Nicaragua
        </option>
        <option
          value="Niger"
        >
          Niger
        </option>
        <option
          value="Nigeria"
        >
          Nigeria
        </option>
        <option
          value="Norway"
        >
          Norway
        </option>
        <option
          value="Oman"
        >
          Oman
        </option>
        <option
          value="Pakistan"
        >
          Pakistan
        </option>
        <option
          value="Palau"
        >
          Palau
        </option>
        <option
          value="Panama"
        >
          Panama
        </option>
        <option
          value="Papua New Guinea"
        >
          Papua New Guinea
        </option>
        <option
          value="Paraguay"
        >
          Paraguay
        </option>
        <option
          value="Peru"
        >
          Peru
        </option>
        <option
          value="Philippines"
        >
          Philippines
        </option>
        <option
          value="Poland"
        >
          Poland
        </option>
        <option
          value="Portugal"
        >
          Portugal
        </option>
        <option
          value="Qatar"
        >
          Qatar
        </option>
        <option
          value="Romania"
        >
          Romania
        </option>
        <option
          value="Russian Federation"
        >
          Russian Federation
        </option>
        <option
          value="Rwanda"
        >
          Rwanda
        </option>
        <option
          value="St Kitts & Nevis"
        >
          St Kitts & Nevis
        </option>
        <option
          value="St Lucia"
        >
          St Lucia
        </option>
        <option
          value="Saint Vincent & the Grenadines"
        >
          Saint Vincent & the Grenadines
        </option>
        <option
          value="Samoa"
        >
          Samoa
        </option>
        <option
          value="San Marino"
        >
          San Marino
        </option>
        <option
          value="Sao Tome & Principe"
        >
          Sao Tome & Principe
        </option>
        <option
          value="Saudi Arabia"
        >
          Saudi Arabia
        </option>
        <option
          value="Senegal"
        >
          Senegal
        </option>
        <option
          value="Serbia"
        >
          Serbia
        </option>
        <option
          value="Seychelles"
        >
          Seychelles
        </option>
        <option
          value="Sierra Leone"
        >
          Sierra Leone
        </option>
        <option
          value="Singapore"
        >
          Singapore
        </option>
        <option
          value="Slovakia"
        >
          Slovakia
        </option>
        <option
          value="Slovenia"
        >
          Slovenia
        </option>
        <option
          value="Solomon Islands"
        >
          Solomon Islands
        </option>
        <option
          value="Somalia"
        >
          Somalia
        </option>
        <option
          value="South Africa"
        >
          South Africa
        </option>
        <option
          value="South Sudan"
        >
          South Sudan
        </option>
        <option
          value="Spain"
        >
          Spain
        </option>
        <option
          value="Sri Lanka"
        >
          Sri Lanka
        </option>
        <option
          value="Sudan"
        >
          Sudan
        </option>
        <option
          value="Suriname"
        >
          Suriname
        </option>
        <option
          value="Swaziland"
        >
          Swaziland
        </option>
        <option
          value="Sweden"
        >
          Sweden
        </option>
        <option
          value="Switzerland"
        >
          Switzerland
        </option>
        <option
          value="Syria"
        >
          Syria
        </option>
        <option
          value="Taiwan"
        >
          Taiwan
        </option>
        <option
          value="Tajikistan"
        >
          Tajikistan
        </option>
        <option
          value="Tanzania"
        >
          Tanzania
        </option>
        <option
          value="Thailand"
        >
          Thailand
        </option>
        <option
          value="Togo"
        >
          Togo
        </option>
        <option
          value="Tonga"
        >
          Tonga
        </option>
        <option
          value="Trinidad & Tobago"
        >
          Trinidad & Tobago
        </option>
        <option
          value="Tunisia"
        >
          Tunisia
        </option>
        <option
          value="Turkey"
        >
          Turkey
        </option>
        <option
          value="Turkmenistan"
        >
          Turkmenistan
        </option>
        <option
          value="Tuvalu"
        >
          Tuvalu
        </option>
        <option
          value="Uganda"
        >
          Uganda
        </option>
        <option
          value="Ukraine"
        >
          Ukraine
        </option>
        <option
          value="United Arab Emirates"
        >
          United Arab Emirates
        </option>
        <option
          value="United Kingdom"
        >
          United Kingdom
        </option>
        <option
          value="United States"
        >
          United States
        </option>
        <option
          value="Uruguay"
        >
          Uruguay
        </option>
        <option
          value="Uzbekistan"
        >
          Uzbekistan
        </option>
        <option
          value="Vanuatu"
        >
          Vanuatu
        </option>
        <option
          value="Vatican City"
        >
          Vatican City
        </option>
        <option
          value="Venezuela"
        >
          Venezuela
        </option>
        <option
          value="Vietnam"
        >
          Vietnam
        </option>
        <option
          value="Yemen"
        >
          Yemen
        </option>
        <option
          value="Zambia"
        >
          Zambia
        </option>
        <option
          value="Zimbabwe"
        >
          Zimbabwe
        </option>
      </select>
      <span
        class="sc-fubCfw kxTiMr"
      >
        Where are they based?
      </span>
    </label>
    <label
      class="sc-jrAGrp ieNyNc"
    >
      <span
        class="sc-kEjbxe fqTkVY"
      >
        Salary
      </span>
      <span
        class="sc-iqHYGH kZrLko"
      >
        <input
          class="sc-crrsfI cZzFYO"
          max="100000000"
          min="0"
          name="salary"
          placeholder="e.g. 5000"
          required=""
          type="number"
          value=""
        />
        <span
          class="sc-dQppl lkFmFs"
        >
          <label
            class="sc-jrAGrp ieNyNc"
          >
            <select
              class="sc-bqyKva iYyJTz sc-bZSQDF cKikdq"
              name="currency"
              required=""
            >
              <option
                value="EUR"
              >
                EUR
              </option>
              <option
                value="USD"
              >
                USD
              </option>
              <option
                value="GBP"
              >
                GBP
              </option>
            </select>
          </label>
        </span>
      </span>
      <span
        class="sc-fubCfw kxTiMr"
      >
        Gross yearly salary
      </span>
    </label>
    <div
      class="sc-gWHgXt jXCrnV"
    >
      <p
        class="sc-bdfBwQ sc-cBNfnY jAfrhP FvUpg"
      >
        Type of employment
      </p>
      <div
        class="sc-citwmv bXtqyI"
      >
        <div
          class="sc-jcVebW divHyd"
        >
          <label
            class="sc-fKFyDc flCNqp"
          >
            <div>
              <div
                class="sc-bdfBwQ fBcJzD"
              >
                Contractor
              </div>
              <div
                class="sc-bdfBwQ sc-gsTCUz fBcJzD hLkbdn"
              >
                Pay your contractors
              </div>
            </div>
            <input
              class="sc-bBXqnf kHDmOT"
              name="employment"
              required=""
              type="radio"
              value="contractor"
            />
            <div
              class="sc-iwyYcG ctdYOl"
            />
          </label>
        </div>
        <div
          class="sc-jcVebW divHyd"
        >
          <label
            class="sc-fKFyDc flCNqp"
          >
            <div>
              <div
                class="sc-bdfBwQ fBcJzD"
              >
                Employee
              </div>
              <div
                class="sc-bdfBwQ sc-gsTCUz fBcJzD hLkbdn"
              >
                Hire and manage remotely
              </div>
            </div>
            <input
              class="sc-bBXqnf kHDmOT"
              name="employment"
              required=""
              type="radio"
              value="employee"
            />
            <div
              class="sc-iwyYcG ctdYOl"
            />
          </label>
        </div>
      </div>
    </div>
  </form>
</div>
`;
